--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "karaoke-app",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:usman571/electron-updater.git"
+  },
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
